[workspace]
members = [
	"sapiens",
	"sapiens_derive",
	"sapiens_tools",
	"sapiens_cli",
	"sapiens_bot",
	"sapiens_exp",
	"xtask",
]
resolver = "2"


[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
description = "A simple bot to conquer the world"
repository = "https://github.com/ssoudan/sapiens"
license = "MIT/Apache-2.0"
readme = "README.md"
publish = true

keywords = ["bot", "language-model"]
categories = ["science"]

[workspace.lints.clippy]
all = { priority = -1, level = "deny" }
cargo = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

# unwrap_used = "deny"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
option_if_let_else = "allow"
must-use-candidate = "warn"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
redundant_pub_crate = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.rust]
unused_must_use = "deny"
unused_imports = "deny"
unreachable_pub = "deny"
