[package]
name = "botrs_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The macro - a simple bot to conquer the world"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]