[package]
name = "sapiens"
version = "0.10.2"
edition.workspace = true
authors.workspace = true
description = "Core - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens"

[features]
default = ["clap"]

# derive Clap traits
clap = ["dep:clap"]

[dependencies]
tokio = { version = "1.34.0" }
tracing = "0.1.40"
async-trait = "0.1.74"
lazy_static = "1.4.0"

serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"

clap = { version = "4.4.8", optional = true }

# OpenAI API - OpenAI and lm-sys/FastChat
async-openai = "0.16.2"
tokenizers = { version = "0.14.1", features = [] }

# GCP Vertex AI Generative Language Models
gcp-vertex-ai-generative-language = "0.1.2"

thiserror = "1.0.50"

[dev-dependencies]
indoc = "2"
insta = { version = "1.34.0", features = ["yaml"] }
