[package]
name = "sapiens"
version = "0.10.2"
edition.workspace = true
authors.workspace = true
description = "Core - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens"

[features]
default = ["clap"]

# derive Clap traits
clap = ["dep:clap"]

[dependencies]
tokio = { version = "1.36.0" }
tracing = "0.1.40"
async-trait = "0.1.77"
lazy_static = "1.4.0"

serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"

clap = { version = "4.5.0", optional = true }

# OpenAI API - OpenAI and lm-sys/FastChat
async-openai = "0.16.3"
tokenizers = { version = "0.15.1", features = [] }

# GCP Vertex AI Generative Language Models
gcp-vertex-ai-generative-language = "0.1.2"

ollama-rs = "*"

thiserror = "1.0.56"

[dev-dependencies]
indoc = "2"
insta = { version = "1.34.0", features = ["yaml"] }
