[package]
name = "sapiens_bot"
version= "0.2.2"
edition.workspace = true
authors.workspace = true
description = "The discord bot - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true


[features]
default = ["wiki", "arxiv"]
# Hue lights related tools
hue = [ "dep:huelib2", "sapiens_tools/hue" ]
# MediaWiki related tools
wiki = [ "sapiens_tools/wiki" ]
# Arxiv related tools
arxiv = [ "sapiens_tools/arxiv" ]
# Summarization
summarize = ["sapiens_tools/summarize"]

[dependencies]
sapiens = { path = "../sapiens", version = "^0.3.0" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.3.0", default-features = false }

huelib2 = { version = "0.13.3", optional = true }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.68"

pyo3 = { version = "0.18.3", features = [] }
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "tokio-runtime"]  }

pulldown-cmark-to-cmark = "10.0.4"
pulldown-cmark = "0.9.2"

dotenvy = "0.15.7"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
