[package]
name = "sapiens_bot"
version= "0.8.0"
edition.workspace = true
authors.workspace = true
description = "The discord bot - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens_bot"


[features]
default = ["wiki", "arxiv", "summarize", "search"]
# Hue lights related tools
hue = [ "dep:huelib2", "sapiens_tools/hue" ]
# MediaWiki related tools
wiki = [ "sapiens_tools/wiki" ]
# Arxiv related tools
arxiv = [ "sapiens_tools/arxiv" ]
# Summarization
summarize = ["sapiens_tools/summarize"]
# Search
search = ["sapiens_tools/search"]


[dependencies]
sapiens = { path = "../sapiens", version = "^0.10.0" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.10.0", default-features = false }

huelib2 = { version = "0.13.3", optional = true }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.73"

pyo3 = { version = "0.19.2", features = [] }
pyo3-asyncio = { version = "0.19.0", features = ["attributes", "tokio-runtime"]  }

pulldown-cmark-to-cmark = "11.0.0"
pulldown-cmark = "0.9.3"

dotenvy = "0.15.7"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.31.0"
