[package]
name = "sapiens_cli"
version= "0.2.1"
edition.workspace = true
authors.workspace = true
description = "The cli interface of a simple bot to conquer the world"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["wiki"]
# Hue lights related tools
hue = [ "dep:huelib2", "sapiens_tools/hue" ]
# MediaWiki related tools
wiki = [ "sapiens_tools/wiki" ]

[dependencies]
sapiens = { path = "../sapiens", version = "^0.2.1" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.2.1", default-features = false }

tokio = { version = "1.27.0", features = ["full"] }

clap = { version = "4.2.4", features = ["derive"] }

dotenvy = "0.15.7"

huelib2 = { version = "0.13.3", optional = true }

async-openai = "0.10.3"
