[package]
name = "sapiens_cli"
version= "0.6.0"
edition.workspace = true
authors.workspace = true
description = "The cli - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens_cli"

[features]
default = ["wiki", "arxiv", "summarize", "search" ]
# Hue lights related tools
hue = [ "dep:huelib2", "sapiens_tools/hue" ]
# MediaWiki related tools
wiki = [ "sapiens_tools/wiki" ]
# Arxiv related tools
arxiv = [ "sapiens_tools/arxiv" ]
# Summarization
summarize = ["sapiens_tools/summarize"]
# Search
search = ["sapiens_tools/search"]


[dependencies]
sapiens = { path = "../sapiens", version = "^0.7.0" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.7.0", default-features = false }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

tokio = { version = "1.28.1", features = ["full"] }
async-trait = "0.1.68"

pyo3 = { version = "0.18.3", features = [] }
pyo3-asyncio = { version = "0.18.0", features = ["attributes", "tokio-runtime"] }

clap = { version = "4.2.7", features = ["derive", "env"] }
colored = "2.0.0"
dotenvy = "0.15.7"

huelib2 = { version = "0.13.3", optional = true }
