[package]
name = "sapiens_derive"
version= "0.3.1"
edition.workspace = true
authors.workspace = true
description = "The macro - a simple bot to conquer the world"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" }
darling = "0.20.0"
darling_macro = "0.20.0"

[lib]
proc-macro = true
