[package]
name = "sapiens_exp"
version= "0.8.1"
edition.workspace = true
authors.workspace = true
description = "Experiments - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens_exp"

[features]
default = [ ]

[dependencies]
sapiens = { path = "../sapiens", version = "^0.10.1" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.10.1", default-features = false }
sapiens_derive = { path = "../sapiens_derive", version = "^0.4.3", default-features = false }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"

rand = "0.8.5"

chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

rust-fsm = "0.6.1"

pyo3 = { version = "0.19.2", features = [] }
pyo3-asyncio = { version = "0.19.0", features = ["attributes", "tokio-runtime"] }

clap = { version = "4.4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"

huelib2 = { version = "0.13.3", optional = true }

[dev-dependencies]
insta = { version = "1.33.0", features = ["yaml"] }
