[package]
name = "sapiens_exp"
version= "0.8.2"
edition.workspace = true
authors.workspace = true
description = "Experiments - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens_exp"

[features]
default = [ ]

[dependencies]
sapiens = { path = "../sapiens", version = "^0.10.2" }
sapiens_tools = { path = "../sapiens_tools", version = "^0.10.2", default-features = false }
sapiens_derive = { path = "../sapiens_derive", version = "^0.4.4", default-features = false }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"

rand = "0.8.5"

chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"

rust-fsm = "0.6.1"

pyo3 = { version = "0.19.2", features = [] }
pyo3-asyncio = { version = "0.19.0", features = ["attributes", "tokio-runtime"] }

clap = { version = "4.4.12", features = ["derive", "env"] }
dotenvy = "0.15.7"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }
