[package]
name = "sapiens_tools"
version = "0.10.2"
edition.workspace = true
authors.workspace = true
description = "The tools - Sapiens"
repository.workspace = true
license.workspace = true
publish.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/sapiens_tools"

[features]
default = ["wiki", "arxiv", "summarize", "search"]
# Hue lights
hue = ["dep:huelib2"]
# MediaWiki: Wikipedia, Wikidata
wiki = ["dep:mediawiki", "dep:serde_json"]
# arXiv
arxiv = ["dep:arxiv-rs"]
# Summarization
summarize = ["dep:async-openai"]
# Search
search = ["dep:reqwest", "dep:serde_json"]
# disable tests not working with dependabot
disable-test-dependabot = []

[dependencies]
sapiens = { path = "../sapiens", version = "^0.10.2" }
sapiens_derive = { path = "../sapiens_derive", version = "^0.4.4" }

huelib2 = { version = "0.13.3", optional = true }
mediawiki = { version = "0.2.11", optional = true }

arxiv-rs = { version = "0.1.5", optional = true }

reqwest = { version = "0.11", features = ["json"], optional = true }

serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
serde_json = { version = "1.0.108", optional = true }

tracing = "0.1.40"

tokio = { version = "1.34.0", features = ["macros"] }
async-trait = "0.1.74"

regex = "1.10.2"
lazy_static = "1.4.0"

pyo3 = { version = "0.19.2", features = [] }

async-openai = { version = "0.16.1", optional = true }

convert_case = "0.6.0"

thiserror = "1.0.50"

[dev-dependencies]
indoc = "2"
serde_json = "1.0.108"
insta = { version = "1.34.0", features = ["yaml"] }
tokio = { version = "1.34.0", features = ["macros"] }
pyo3-asyncio = { version = "0.19.0", features = [
    "attributes",
    "tokio-runtime",
    "testing",
] }
dotenvy = "0.15.7"

[package.metadata.cargo-udeps.ignore]
normal = ["pyo3-asyncio"]


[package.metadata.cargo-machete]
ignored = ["arxiv-rs"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false
