[package]
name = "xtask"
description = "Xtask tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
license.workspace = true

[dependencies]
anyhow = "1.0"
xshell = "0.2"
xflags = "0.3"
toml = "0.8"
glob = "0.3"
regex = "1.11"
color-print = "0.3"

[lints]
workspace = true
